--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://gauravparashar12.github.io/",
+  "homepage": "http://gauravparashar12.github.io/jny",
   "name": "jny",
   "version": "0.1.0",
   "private": true,
